// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LuaIterable with LuaMultiReturn value type invalid LuaIterable<LuaMultiReturn> without destructuring ("for (const s of testIterable()) {}"): code 1`] = `
"require(\\"lualib_bundle\\");
local ____exports = {}
function ____exports.__main(self)
    local function testIterator(strsArray, lastStr)
        local str = strsArray[(__TS__ArrayFindIndex(
            strsArray,
            function(____, strs) return strs[1] == lastStr end
        ) + 1) + 1]
        if str then
            return table.unpack(str)
        end
    end
    local strsArray = {{\\"a1\\", \\"a2\\"}, {\\"b1\\", \\"b2\\"}, {\\"c1\\", \\"c2\\"}}
    local function testIterable()
        return testIterator, strsArray, \\"\\"
    end
    for ____ in testIterable(nil) do
    end
end
return ____exports"
`;

exports[`LuaIterable with LuaMultiReturn value type invalid LuaIterable<LuaMultiReturn> without destructuring ("for (const s of testIterable()) {}"): diagnostics 1`] = `"main.ts(13,24): error TSTL: LuaIterable with a LuaMultiReturn return value type must be destructured."`;

exports[`LuaIterable with LuaMultiReturn value type invalid LuaIterable<LuaMultiReturn> without destructuring ("let s; for (s of testIterable()) {}"): code 1`] = `
"require(\\"lualib_bundle\\");
local ____exports = {}
function ____exports.__main(self)
    local function testIterator(strsArray, lastStr)
        local str = strsArray[(__TS__ArrayFindIndex(
            strsArray,
            function(____, strs) return strs[1] == lastStr end
        ) + 1) + 1]
        if str then
            return table.unpack(str)
        end
    end
    local strsArray = {{\\"a1\\", \\"a2\\"}, {\\"b1\\", \\"b2\\"}, {\\"c1\\", \\"c2\\"}}
    local function testIterable()
        return testIterator, strsArray, \\"\\"
    end
    local s
    for ____ in testIterable(nil) do
    end
end
return ____exports"
`;

exports[`LuaIterable with LuaMultiReturn value type invalid LuaIterable<LuaMultiReturn> without destructuring ("let s; for (s of testIterable()) {}"): diagnostics 1`] = `"main.ts(13,25): error TSTL: LuaIterable with a LuaMultiReturn return value type must be destructured."`;
